Highlight and fix whitespace

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -14,10 +14,6 @@
 }
 .container-events {
     .blog-image-wrapper {
-        margin: 0 0;
-        padding-left: 20px;
-        padding-right: 20px;
-        height: 200px;
         img {
             width: 100%;
             height: 100%;
@@ -58,7 +54,7 @@
         &:before {
             content: '';
             width: 22px;
-            height: 1px;
+            height: 3px;
             position: absolute;
             left: 0;
             top: 50%;
